# MovingMax

./: CMakeLists.txt  README.md
src/: MovingMax.cpp  MovingMax.h  main.cpp
